# cugraph-template

./: CMakeLists.txt  README.md  build.sh  mtx-parser.py  publickey.asc  runner-louvain.py
conda/environments/: dependency_cuda_12_x.yaml
src/: louvain.cpp  louvain.cu
src/.cache/clangd/index/: conversion_utilities.hpp.6A93B1733D2E49BC.idx  conversion_utilities_impl.cuh.944CFB81AD051B88.idx  conversion_utilities_mg.cu.D24B63BF350DE0FC.idx  conversion_utilities_sg.cu.02CD5DC543FC2205.idx  csv_file_utilities.cu.B61DE274918BC0A9.idx  csv_file_utilities.hpp.323895B75F615BA2.idx  device_comm_wrapper.cu.6165D6A61508AE06.idx  device_comm_wrapper.hpp.907B6F34F08B0604.idx  graph_partition_utils.cuh.0BAA7154CDBE4EC7.idx  louvain.cu.2952D0698B40C0B8.idx  matrix_market_file_utilities.cu.27AEC74405168304.idx  matrix_market_file_utilities.hpp.C7ADD3179F10DC30.idx  misc_utilities.hpp.ED7F16549C485211.idx  structure_utils.cuh.26780C1AFD7C97DF.idx  test_graphs.hpp.8981B41CEA3510D3.idx  thrust_wrapper.cu.3F88E8B3A1AA5B18.idx  thrust_wrapper.hpp.0F5E7EAFE9AAF210.idx
src/utils/: conversion_utilities.hpp  conversion_utilities_impl.cuh  conversion_utilities_mg.cu  conversion_utilities_sg.cu  csv_file_utilities.cu  csv_file_utilities.hpp  device_comm_wrapper.cu  device_comm_wrapper.hpp  matrix_market_file_utilities.cu  matrix_market_file_utilities.hpp  misc_utilities.cpp  misc_utilities.hpp  test_graphs.hpp  thrust_wrapper.cu  thrust_wrapper.hpp
